--- a/styles/index.css
+++ b/styles/index.css
@@ -1,25 +1,25 @@
 body {
-  background-color: rgb(20, 42, 49);
+  background-color: rgb(232, 220, 182);
 }
 h2 {
-  color: rgb(199, 199, 238);
+  color: rgb(78, 89, 39);
   margin-left: 50px;
   font-size: 100px;
 }
-nav { margin-left: 50px; 
-
+nav {
+  margin-left: 50px;
 }
 
-img { background-image: "images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg";
-
+img {
+  background-image: "images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg";
 }
-button {margin-left: 50px;
-        size: 50px;
-
-}
-
-ul {
-    color: crimson;
-    margin-left: 50px;
-    font-size: 20px;
+button {
+  margin-left: 50px;
+  size: 50px;
+  color: rgb(245, 122, 15);
+  background-color: rgb(124, 140, 3);
+  text-align: center;
+  font-size: 20px;
+  border: none;
+  padding: 15px 32px;
 }
