--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,8 @@ img {
   background-image: "images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg";
 }
 button {
+  display: inline-block;
+  border-radius: 5px;
   margin-left: 50px;
   size: 50px;
   color: rgb(245, 122, 15);
