--- a/styles/index.css
+++ b/styles/index.css
@@ -15,7 +15,7 @@ img {
 }
 button {
   display: inline-block;
-  border-radius: 5px;
+  border-radius: 50px;
   margin-left: 50px;
   size: 50px;
   color: rgb(245, 122, 15);
@@ -24,4 +24,5 @@ button {
   font-size: 20px;
   border: none;
   padding: 15px 32px;
+  cursor: pointer;
 }
