--- a/styles/index.css
+++ b/styles/index.css
@@ -4,19 +4,22 @@ body {
 h2 {
   color: rgb(78, 89, 39);
   margin-left: 50px;
-  font-size: 100px;
+  font-size: 80px;
 }
 nav {
   margin-left: 50px;
 }
 
-img {
-  background-image: "images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg";
+style{
+  background: "images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg";
+  background-size: 500px 500px; 
+  background-position: right bottom, left top;
 }
 button {
   display: inline-block;
   border-radius: 50px;
   margin-left: 50px;
+  margin-bottom: 10px;
   size: 50px;
   color: rgb(245, 122, 15);
   background-color: rgb(124, 140, 3);
