--- a/styles/explore.css
+++ b/styles/explore.css
@@ -1,15 +1,23 @@
 body {
-    background-color: rgb(232, 220, 182);
+    background-color: rgb(255, 255, 255);
 }
-head { font-size: larger; 
+head { font-size: larger;
+}
 
+h1  {font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 28px;
+
+}
+
+p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
 
 button { display: inline-block;
          border-radius: 50px;
          size: 50px;
-         color: rgb(245, 122, 15);
-         background-color: rgb(124, 140, 3);
+         color: rgb(254, 254, 254);
+         background-color: rgb(36, 65, 74);
          text-align: center;
          font-size: 20px;
          border: none;
