--- a/styles/index.css
+++ b/styles/index.css
@@ -1,16 +1,17 @@
 body {
   background-color: rgb(255, 255, 255);
 }
-h2 {
+h1 {
   color: rgb(78, 89, 39);
   margin-left: 50px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 80px;
 }
 nav {
   margin-left: 50px;
 }
 
-style{
+img{
   background: "images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg";
   background-size: 500px 500px; 
   background-position: right bottom, left top;
