--- a/styles/mens.css
+++ b/styles/mens.css
@@ -1,3 +1,21 @@
 body {
       background-color: rgb(255, 255, 255);  
 }
+
+h1 {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+button {
+      display: inline-block;
+      border-radius: 50px;
+      margin-left: 50px;
+      margin-bottom: 10px;
+      size: 50px;
+      color: rgb(254, 254, 254);
+      background-color: rgb(36, 65, 74);
+      text-align: center;
+      font-size: 20px;
+      border: none;
+      padding: 15px 32px;
+      cursor: pointer;
+    }
