--- a/styles/index.css
+++ b/styles/index.css
@@ -1,20 +1,31 @@
+
+
+
+.cart {
+  background-color: rgb(228, 39, 39);
+}
+
+
+
 body {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(254, 254, 254);
 }
 h1 {
   color: rgb(78, 89, 39);
   margin-left: 50px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 80px;
+  
 }
 nav {
+  display: flex;
   margin-left: 50px;
 }
 
 
 
 button {
-  display: inline-block;
+  display: inline-flex;
   border-radius: 50px;
   margin-left: 50px;
   margin-bottom: 10px;
