--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,12 @@
 
 
 .cart {
-  background-color: rgb(228, 39, 39);
+  display: flex;
+  background-color: rgb(0, 0, 0);
+  background-repeat: no-repeat;
+  background-position: center;
+  float: right;
+
 }
 
 
