cart css and index css
float icons and search bar
added search button th index

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,7 @@
 
-
+.search {
+  float: right;
+}
 
 .cart {
   display: flex;
@@ -7,6 +9,7 @@
   background-repeat: no-repeat;
   background-position: center;
   float: right;
+
 
 }
 
