--- a/styles/cart.css
+++ b/styles/cart.css
@@ -34,27 +34,15 @@ nav {
 .icon{
     display: flex;
 }
-.burger{
-    display: none;
-    cursor: pointer;
-}
 
-.burger div{
-    width: 25px;
-    height: 3px;
-    background-color: rgb(243, 237, 237);
-    margin: 5px;
 
-}
 @media screen and (max-width:1024px){
     .nav-links{
         width: 50%;
     }
 }
 @media screen and (max-width:768px){
-    body{
-        overflow-x: hidden;
-    }
+    
     .nav-links{
         position: absolute;
         right: 0px;
@@ -65,36 +53,23 @@ nav {
         flex-direction: column;
         align-items: center;
         width: 40%;
-        transform: translateX(100%);
-        transition: transform 0.7s ease-in ;
+        
 
 
     }
-    .nav-links li{
-        opacity: 0;
-    }
-    .burger{
-        display: block;
-    }
+    
+    
 }
 
-.nav-active{
-    transform: translateX(0%);
 
-}
-@keyframes navLinkFade{
-    from{
-        opacity: 0;
-        transform: translateX(50px);
 
-    }
-    to{
-        opacity: 1;
-        transform: translateX(50px);
+    
 
-    }
-}
 footer{
+    display: flex;
    margin: 5px;
-    justify-content:space-around;
+    justify-content: left;
+}
+.sosial-media-icon{
+    justify-content: space-around;
 }
