--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,8 @@
 
 
 
+  
+
 
 body {
   background-color: rgb(254, 254, 254);
@@ -13,8 +15,8 @@ body {
 h1 {
   color: rgb(78, 89, 39);
   margin-left: 50px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 80px;
+ display: none;
+  font-size: 50px;
   
 }
 
