--- a/styles/mensproduct.css
+++ b/styles/mensproduct.css
@@ -12,7 +12,7 @@ button {
     margin-bottom: 10px;
     size: 50px;
     color: rgb(254, 254, 254);
-    background-color: rgb(36, 65, 74);
+    background-color: rgba(36, 65, 74, 69%);
     text-align: center;
     font-size: 20px;
     border: none;
