--- a/styles/cart.css
+++ b/styles/cart.css
@@ -31,10 +31,17 @@ nav {
     letter-spacing: 3px;
     font-size: 20px;
 }
-.icon{
+img{
     display: flex;
+    margin: 10px;
 }
+.icon{
+    display: none;
+}
+p{
+    display: flex;
 
+}
 
 @media screen and (max-width:1024px){
     .nav-links{
@@ -47,7 +54,7 @@ nav {
         position: absolute;
         right: 0px;
         height: 92vh;
-        top: 8vh;
+        top: 9.6vh;
         background-color:  rgba(36, 65, 74, 69%);
         display: flex;
         flex-direction: column;
@@ -57,30 +64,27 @@ nav {
 
 
     }
+    .jacket-info{
+        position: absolute;
+        height: 92vh;
+        flex-direction: column;
+        width: 60px;
+
+    }
     
-    
 }
 
-
-
-    
-
-footer{
-    
-   margin: 5px;
-    justify-content: left;
-}
-.sosial-media-icon{
-    justify-content: space-around;
-}
-
-.product{
-    align-items: center;
-
-}
-.jacketinfo{
-    contain: layout;
-}
-p{
-    margin-left: 20px;
-}
+button {
+    display: inline-block;
+    border-radius: 50px;
+    margin-left: 50px;
+    margin-bottom: 10px;
+    size: 60px;
+    color: rgb(243, 237, 237);
+    background-color:  rgba(36, 65, 74, 69%);
+    text-align: center;
+    font-size: 20px;
+    border: none;
+    padding: 15px 32px;
+    cursor: pointer;
+  }
