--- a/styles/global.css
+++ b/styles/global.css
@@ -1,76 +1,88 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 8vh;
-    background-color: rgba(36, 65, 74, 69%);
-    
-  }
-  
-  .logo{
-      justify-content: left;
-  }
-      
-  .nav-links{
-      display: flex;
-      justify-content: space-around;
-      width: 30%;
-  }
-  .nav-links li{
-      list-style: none;
-  }
-  .nav-links a{
-      color: rgb(243, 237, 237);
-      text-decoration: none;
-      letter-spacing: 3px;
-      font-size: 20px;
-  }
-  .icon{
-      display: flex;
-  }
-  
-  
-  @media screen and (max-width:1024px){
-      .nav-links{
-          width: 50%;
-      }
-  }
-  @media screen and (max-width:768px){
-      
-      .nav-links{
-          position: absolute;
-          right: 0px;
-          height: 92vh;
-          top: 8vh;
-          background-color:  rgba(36, 65, 74, 69%);
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          width: 40%;
-          
-  
-  
-      }
-      
-      
-  }
-  
-  h1{display: none;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-  
-      
-  
-  footer{
-      display: flex;
-     margin: 5px;
-      justify-content: left;
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  background-color: rgba(36, 65, 74, 69%);
+}
+
+.logo {
+  justify-content: left;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
+}
+.nav-links li {
+  list-style: none;
+}
+.nav-links a {
+  color: rgb(243, 237, 237);
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-size: 20px;
+}
+.icon {
+  display: flex;
+}
+
+@media screen and (max-width: 1024px) {
+  .nav-links {
+    width: 50%;
   }
-  .sosial-media-icon{
-      justify-content: space-around;
+}
+@media screen and (max-width: 768px) {
+  .nav-links {
+    position: absolute;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    background-color: rgba(36, 65, 74, 69%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+  }
+}
+h1 {
+  display: none;
+}
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  background-color: rgba(36, 65, 74, 69%);
+  color: rgb(254, 254, 254);
+}
+.social-media {
+  align-items: baseline;
+}
+li {
+  list-style: none;
+}
+
+button {
+    display: inline-flex;
+    border-radius: 50px;
+    margin-left: 50px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    size: 50px;
+    color: rgb(254, 254, 254);
+    background-color: rgb(36, 65, 74);
+    text-align: center;
+    font-size: 20px;
+    border: none;
+    padding: 15px 32px;
+    cursor: pointer;
+    opacity: 78%;
   }
