--- a/styles/cart.css
+++ b/styles/cart.css
@@ -42,6 +42,18 @@ p{
     display: flex;
 
 }
+form{
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    margin: 10px;
+    cursor: pointer;
+    padding: 1px;
+    width: 30%;
+    font-size: 18px;
+    
+}
+
 
 @media screen and (max-width:1024px){
     .nav-links{
