--- a/styles/global.css
+++ b/styles/global.css
@@ -39,32 +39,29 @@ nav {
     width: 50%;
   }
 }
-@media screen and (max-width: 768px) {
-  .nav-links {
-    position: absolute;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    background-color: rgba(36, 65, 74, 69%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 40%;
-  }
-}
+
 h1 {
   display: none;
 }
 footer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 8vh;
+   min-height: 8vh;
   background-color: rgba(36, 65, 74, 69%);
   color: rgb(254, 254, 254);
 }
-.social-media {
-  align-items: baseline;
+.footer-text {
+  font-size: 12px;
+  display: flex;
+  flex-direction: inherit;
+  padding-left: 5px;
+}
+.socialmedia{
+  display: flex;
+  justify-content: space-between;
+  padding-left: 5px;
+  padding-top: 5px;
+  flex-direction: row;
+
+  min-height: 5vh;
 }
 li {
   list-style: none;
