--- a/styles/cart.css
+++ b/styles/cart.css
@@ -33,6 +33,9 @@ nav {
 }
 img{
     display: flex;
+    position: centre;
+    max-height: 45%;
+    max-width: 45%;
     margin: 10px;
 }
 .icon{
@@ -62,20 +65,6 @@ form{
 }
 @media screen and (max-width:768px){
     
-    .nav-links{
-        position: absolute;
-        right: 0px;
-        height: 92vh;
-        top: 9.6vh;
-        background-color:  rgba(36, 65, 74, 69%);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 40%;
-        
-
-
-    }
     .jacket-info{
         position: absolute;
         height: 92vh;
